--- a/JSOopTemplate/index.html
+++ b/JSOopTemplate/index.html
@@ -8,21 +8,21 @@
 <title>Js Oop Template</title>
     
 <meta name="description" content="">
-<meta name="copyright" content="" />
+<meta name="copyright" content="">
 <meta name="robots" content="noindex,nofollow">
 
 <script type="text/javascript" src="./build/js-oop-template.js"></script>
+
+</head>
+<body>
+
+<main></main>
 
 <script>
 document.addEventListener( 'DOMContentLoaded', () => {
     jsOopTemplate.init();
 } );
 </script>
-
-</head>
-<body>
-
-<main></main>
 
 </body>
 </html>
